--- a/src/jademade.css
+++ b/src/jademade.css
@@ -1,5 +1,24 @@
 body {
-  background-color: #5bc0be;
+  background-color: #3a506b;
+  font-family: 'Lato', sans-serif;
+  color: #0b132b;
+}
+
+h1 {
+  color: #6fffe9;
+  font-size: 4em;
+  padding: 30px 0;
+  font-weight: 100;
+  margin: 0;
+  font-family: "Shadows Into Light", cursive;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  color: #FFCB11;
+  margin-top: 0;
+  font-weight: 300;
 }
 
 a {
@@ -9,7 +28,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #5bc0be;
+  color: #FF4242;
 }
 
 nav {
@@ -17,7 +36,6 @@ nav {
   width: 100vw;
   background-color: #6fffe9;
   display: flex;
-  border-bottom: solid 1px #0b132b;
 }
 
 nav ul {
@@ -34,25 +52,37 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  padding: 5px;
+  padding: 5px 10px;
+  position: relative;
 }
 
 nav .img-wrap {
   display: inline-block;
-  padding: 20px;
+  padding: 5px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 nav .img-wrap img {
-  animation: logo-spin infinite 22s linear;
-  height: 80px;
+  animation: logo-spin infinite 5s ease-in-out;
+  height: 60px;
   max-width: 100%;
 }
 
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  width: 95%;
+}
+
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  0% {
+    transform: rotate(-20deg);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: rotate(30deg);
+  }
+  100% {
+    transform: rotate(-20deg);
   }
 }
