--- a/src/jademade.css
+++ b/src/jademade.css
@@ -31,10 +31,19 @@ a:hover, a:focus {
   color: #FF4242;
 }
 
+.wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+  width: 95%;
+}
+
 nav {
   position: relative;
   width: 100vw;
   background-color: #6fffe9;
+}
+
+nav .wrapper {
   display: flex;
 }
 
@@ -57,7 +66,6 @@ nav ul li {
 }
 
 nav .img-wrap {
-  display: inline-block;
   padding: 5px;
   margin-top: 10px;
   margin-left: 10px;
@@ -69,10 +77,13 @@ nav .img-wrap img {
   max-width: 100%;
 }
 
-.wrapper {
-  max-width: 1000px;
-  margin: 0 auto;
-  width: 95%;
+footer {
+  background-color: #6fffe9;
+  padding: 10px 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 @keyframes logo-spin {
