--- a/src/jademade.css
+++ b/src/jademade.css
@@ -45,18 +45,14 @@ nav {
 
 nav .wrapper {
   display: flex;
+  justify-content: space-between;
 }
 
 nav ul {
-  margin: 0 auto;
-  max-width: 1000px;
   list-style: none;
-  width: calc(100% - 150px);
-  padding: 15px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  vertical-align: text-bottom;
 }
 
 nav ul li {
@@ -84,6 +80,25 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+footer .wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .social a {
+  padding-right: 12px;
+}
+
+footer .social .fa {
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+footer .social .fa.fa-etsy {
+  font-size: 16px;
 }
 
 @keyframes logo-spin {
