--- a/src/jademade.scss
+++ b/src/jademade.scss
@@ -9,6 +9,10 @@ $green: #00D819;
 $purple: #4900aa;
 $writ: 'Shadows Into Light', cursive;
 
+@font-face {
+  font-family: 'WorldFamous';
+  src: url('/worldfamous.woff2');
+}
 
 body {
   background-color: $dark;
@@ -18,11 +22,11 @@ body {
 
 h1 {
   color: $lightest;
-  font-size: 4em;
-  padding: 30px 0;
+  font-size: 5em;
+  padding: 40px 0;
   font-weight: 100;
   margin: 0;
-  font-family: $writ;
+  font-family: WorldFamous, sans-serif;
   text-align: center;
 }
 
@@ -31,6 +35,7 @@ h2 {
   color: $yellow;
   margin-top: 0;
   font-weight: 300;
+  font-size: 1.5em;
 }
 
 a {
@@ -44,7 +49,7 @@ a {
 }
 
 .wrapper {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   width: 95%;
 }
@@ -77,6 +82,14 @@ nav {
       animation: logo-spin infinite 5s ease-in-out;
       height: 60px;
       max-width: 100%;
+    }
+  }
+}
+
+.about {
+  .section {
+    &:nth-child(2) {
+      background-color: $light;
     }
   }
 }
