--- a/src/jademade.css
+++ b/src/jademade.css
@@ -25,6 +25,7 @@ h2 {
   margin-top: 0;
   font-weight: 300;
   font-size: 1.5em;
+  margin-bottom: 40px;
 }
 
 a {
@@ -35,6 +36,10 @@ a {
 
 a:hover, a:focus {
   color: #FF4242;
+}
+
+.body-content {
+  padding-bottom: 40px;
 }
 
 .wrapper {
@@ -79,8 +84,17 @@ nav .img-wrap img {
   max-width: 100%;
 }
 
+.about .section .img-wrap {
+  text-align: center;
+}
+
 .about .section:nth-child(2) {
+  padding: 30px 0 10px;
   background-color: #5bc0be;
+}
+
+.about .slow-grow {
+  animation: slow-grow infinite 7.5s ease-in-out;
 }
 
 footer {
@@ -120,5 +134,17 @@ footer .social .fa.fa-etsy {
   }
   100% {
     transform: rotate(-20deg);
+  }
+}
+
+@keyframes slow-grow {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
   }
 }
