--- a/src/jademade.css
+++ b/src/jademade.css
@@ -22,7 +22,6 @@ h1 {
 h2 {
   text-align: center;
   color: #FFCB11;
-  margin-top: 0;
   font-weight: 300;
   font-size: 1.5em;
   margin-bottom: 40px;
@@ -91,6 +90,18 @@ nav .img-wrap img {
 .about .section:nth-child(2) {
   padding: 30px 0 10px;
   background-color: #5bc0be;
+}
+
+.about .section .link {
+  margin-top: 40px;
+}
+
+.about .section .link a {
+  color: white;
+}
+
+.about .section .link a:focus, .about .section .link a:hover {
+  color: #FF4242;
 }
 
 .about .slow-grow {
