--- a/src/jademade.scss
+++ b/src/jademade.scss
@@ -7,7 +7,6 @@ $orange: #FF4242;
 $yellow: #FFCB11;
 $green: #00D819;
 $purple: #4900aa;
-
 @font-face {
   font-family: 'WorldFamous';
   src: url('/worldfamous.woff2');
@@ -32,7 +31,6 @@ h1 {
 h2 {
   text-align: center;
   color: $yellow;
-  margin-top: 0;
   font-weight: 300;
   font-size: 1.5em;
   margin-bottom: 40px;
@@ -97,6 +95,16 @@ nav {
     &:nth-child(2) {
       padding: 30px 0 10px;
       background-color: $light;
+    }
+    .link {
+      margin-top: 40px;
+      a {
+        color: white;
+        &:focus,
+        &:hover {
+          color: $orange;
+        }
+      }
     }
   }
   .slow-grow {
