--- a/src/jademade.css
+++ b/src/jademade.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #3a506b;
+  background-color: #006ba6;
   font-family: 'Lato', sans-serif;
   color: #0b132b;
 }
@@ -28,13 +28,13 @@ h2 {
 }
 
 a {
-  color: #0b132b;
+  color: #ffbc42;
   transition: all .3s;
   text-decoration: none;
 }
 
 a:hover, a:focus {
-  color: #FF4242;
+  color: #006ba6;
 }
 
 .body-content {
@@ -50,7 +50,7 @@ a:hover, a:focus {
 nav {
   position: relative;
   width: 100vw;
-  background-color: #6fffe9;
+  background-color: #8f2d56;
 }
 
 nav .wrapper {
@@ -89,7 +89,7 @@ nav .img-wrap img {
 
 .about .section:nth-child(2) {
   padding: 30px 0 10px;
-  background-color: #5bc0be;
+  background-color: #ffbc42;
 }
 
 .about .section .link {
@@ -101,7 +101,7 @@ nav .img-wrap img {
 }
 
 .about .section .link a:focus, .about .section .link a:hover {
-  color: #FF4242;
+  color: #d81159;
 }
 
 .about .slow-grow {
@@ -109,7 +109,7 @@ nav .img-wrap img {
 }
 
 footer {
-  background-color: #6fffe9;
+  background-color: #8f2d56;
   padding: 10px 0;
   position: fixed;
   bottom: 0;
@@ -128,23 +128,20 @@ footer .social a {
 }
 
 footer .social .fa {
-  font-size: 20px;
+  font-size: 30px;
   vertical-align: middle;
 }
 
 footer .social .fa.fa-etsy {
-  font-size: 16px;
+  font-size: 24px;
 }
 
 @keyframes logo-spin {
   0% {
-    transform: rotate(-20deg);
-  }
-  50% {
-    transform: rotate(30deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(-20deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -153,7 +150,7 @@ footer .social .fa.fa-etsy {
     transform: scale(1);
   }
   50% {
-    transform: scale(1.05);
+    transform: scale(1.15);
   }
   100% {
     transform: scale(1);
